--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 *{
   scroll-behavior: smooth;
+  scroll-padding-top: 125px;/*al ejecutar el scroll-behavior, el contenido no se oculta tras el nav*/
 }
 
 body{
@@ -13,78 +14,97 @@ body{
 }
 
 /*NAVBAR*/
-.navbar{
+#navbar{
+  overflow: hidden;
+  background-color: #34495E;
+  padding: 90px 10px;
+  transition: 0.4s;
   position: fixed;
   width: 100%;
   top: 0;
-  left: 0;
-  z-index: 10000;
-  display: flex;
-  justify-content: space-between;
+  z-index: 99;
+  text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.6);
 }
 
-.navbar ul{
-  list-style: none;
-  display: flex;
-  margin-right: 30px;
-  margin-top: 30px;
-}
-
-.navbar ul li:not(:last-child){
-  margin-right: 50px;
-}
-
-.navbar ul li a {
+#navbar a {
+  float: left;
+  color: #EAFAF1;
+  text-align: center;
+  padding: 12px;
   text-decoration: none;
-  color: #ffffff;
-  text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.5);
+  font-size: 18px;
+  line-height: 25px;
+  border-radius: 4px;
 }
-/*parallax*/
-  .sample-header {
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    /**background-image: url("../img/laptop-3214756.svg");*/
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    z-index: 1000;
-  }
-  .sample-header::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-color: rgb(66, 66, 124);
-    background-position: center;
-    background-size: cover;
-    background-image: url("../img/laptop-3214756.svg");
-    background-repeat: no-repeat;
-    /* opacity: 0.1; */
-    /*background-blend-mode: screen, overlay;*/
-    min-height: 125.77px;
-  }
-  /*MIS DATOS*/
-  .sample-header-section {
-    position: absolute;
-    top: 15px;
-    padding-bottom: 15%;
-    padding-left: 5%;
-    display: flex;
-    justify-content: left;
-    max-width: auto;
-    color: #EAFAF1;
-    align-items: center;
-    text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.6);
-    z-index: 4;
-  }
 
-  .sample-header-section img {
-    padding-right: 15px;
+#navbar #logo{
+  font-size: 35px;
+  font-weight: bold;
+  transition: 0.4s;
+  cursor: pointer;
+  display: flex;
+  position: absolute;
+  top: 13px;
+  justify-content: left;
+  align-items: center;
+}
+
+#navbar #logo span{
+  margin-left: 15px;
+}
+
+#profile-img{
+  height: 165px;
+  width: 157px;
+  border-radius: 60%;
+  transition: 0.4s;
+}
+
+#navbar a:hover{
+  background-color: darkgrey;
+  color: #283747;
+}
+
+#navbar-right {
+  float: right;
+  margin-right: 5%;
+}
+
+@media screen and (max-width: 580px) {
+  #navbar {
+    padding: 20px 10px !important; /* Use !important to make sure that JavaScript doesn't override the padding on small screens */
   }
+  #navbar a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  #navbar-right {
+    float: none;
+  }
+}
+/*PROGRESS SCROLL*/
+.header {
+  position: fixed;
+  top: 0;
+  z-index: 156548;
+  width: 100%;
+  background-color: #f1f1f1;
+}
+
+/* The progress container (grey background) */
+.progress-container {
+  width: 100%;
+  height: 8px;
+  background: #ccc;
+}
+
+/* The progress bar (scroll indicator) */
+.progress-bar {
+  height: 8px;
+  background: #138D75;
+  width: 0%;
+}
 
   h1 {
     font-weight: 500;
@@ -93,6 +113,7 @@ body{
     font-weight: 400;
   }
   .sample-section-wrap {
+    margin-top: 200px;
     width: 100%;
     height: 100%;
   }
@@ -104,4 +125,6 @@ body{
     padding: 40px;
   }
   
-  
+  .section{
+    height: 555px;
+  }
