--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 *{
   scroll-behavior: smooth;
-  scroll-padding-top: 125px;/*al ejecutar el scroll-behavior, el contenido no se oculta tras el nav*/
+  scroll-padding-top: 115px;/*al ejecutar el scroll-behavior, el contenido no se oculta tras el nav*/
 }
 
 body{
@@ -10,13 +10,15 @@ body{
     font-family: 'Roboto Mono', monospace;
     font-family: 'Ubuntu', sans-serif;
     color: white;
-    text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.6);
 }
 
 /*NAVBAR*/
 #navbar{
   overflow: hidden;
-  background-color: #34495E;
+  /* background-color: #34495E; */
+  background: #34495E;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #34495E, #2E4053);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right,#2E4053 , #34495E); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   padding: 90px 10px;
   transition: 0.4s;
   position: fixed;
@@ -32,7 +34,7 @@ body{
   text-align: center;
   padding: 12px;
   text-decoration: none;
-  font-size: 18px;
+  font-size: 15px;
   line-height: 25px;
   border-radius: 4px;
 }
@@ -44,7 +46,7 @@ body{
   cursor: pointer;
   display: flex;
   position: absolute;
-  top: 13px;
+  top: 18px;
   justify-content: left;
   align-items: center;
 }
@@ -95,23 +97,23 @@ body{
 /* The progress container (grey background) */
 .progress-container {
   width: 100%;
-  height: 8px;
-  background: #ccc;
+  height: 2px;
+  background: #34495E;
 }
 
 /* The progress bar (scroll indicator) */
 .progress-bar {
-  height: 8px;
+  height: 2px;
   background: #138D75;
   width: 0%;
 }
 
-  h1 {
+  /* h1 {
     font-weight: 500;
   }
   h2 {
     font-weight: 400;
-  }
+  } */
   .sample-section-wrap {
     margin-top: 200px;
     width: 100%;
@@ -128,3 +130,118 @@ body{
   .section{
     height: 555px;
   }
+
+/*columnas*/
+.column{
+  float: left;
+}
+
+.column.side{
+  width: 25%;
+}
+
+.column.middle{
+  width: 40%;
+
+}
+
+.container{
+  position: relative;
+  max-width: auto;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 40px;
+}
+
+@media screen and (max-width: 600px) {
+  .column.side, .column.middle {
+    width: 100%;
+  }
+}
+
+.progress {
+  width: 100%; /* Full width */
+  background-color: #ddd; /* Grey background */
+  transition: 0.3s;
+}
+.progress:hover{
+  transform: scale(1.05);
+}
+
+.skills {
+  text-align: right; /* Right-align text */
+  padding-top: 3px; /* Add top padding */
+  padding-bottom: 3px; /* Add bottom padding */
+  color: white; /* White text color */
+}
+
+.html {width: 90%; background-color: #45B39D;}
+.css {width: 80%; background-color: #45B39D;}
+.js {width: 75%; background-color: #45B39D;}
+.java {width: 80%; background-color: #45B39D;}
+.oracle {width: 65%; background-color: #45B39D;}
+.mysql {width: 90%; background-color: #45B39D;}
+.angular {width: 60%; background-color: #45B39D;}
+.vue {width: 60%; background-color: #45B39D;}
+.linux {width: 70%; background-color: #45B39D;}
+.react {width: 55%; background-color: #45B39D;}
+.python  {width: 70%; background-color: #45B39D;}
+.pentaho {width: 60%; background-color: #45B39D;}
+
+/*about section*/
+.row{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.col{
+  width: 33.3%;
+  margin-bottom: 16px;
+  padding: 0 8px;
+}
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  margin: 8px;
+  background-color: #D6DBDF;
+  color: #000;
+  transition: 0.6s;
+}
+.card:hover{
+  transform: scale(1.2);
+}
+.about-text {
+  padding: 15px;
+  text-align: center;
+  background-color: #566573;
+}
+.contenedor{
+  padding: 5px 16px;
+  align-items: center;
+}
+
+.contenedor::after, .row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.title {
+  color: gray;
+}
+
+.button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #138D75;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  border-radius: 15px ;
+}
+
+.button:hover {
+  background-color: #369c88;
+}
