--- a/css/styles.css
+++ b/css/styles.css
@@ -204,16 +204,19 @@ body{
   margin: 8px;
   background-color: #D6DBDF;
   color: #000;
-  transition: 0.6s;
 }
-.card:hover{
-  transform: scale(1.2);
-}
+
 .about-text {
   padding: 15px;
   text-align: center;
   background-color: #566573;
+  transition: 0.6s;
 }
+.about-text:hover{
+  transform: scale(1.1);
+  box-shadow: 5ch;
+}
+
 .contenedor{
   padding: 5px 16px;
   align-items: center;
@@ -244,4 +247,56 @@ body{
 
 .button:hover {
   background-color: #369c88;
+}
+
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 100000000; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  transition: all 1s;
+}
+
+.modal-header {
+  padding: 2px 16px;
+  background-color: #808B96;
+  color: white;
+}
+
+/* Modal Body */
+.modal-body {padding: 2px 16px;color: black;}
+
+/* Modal Footer */
+.modal-footer {
+  padding: 2px 16px;
+  background-color: #808B96;
+  color: white;
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #EAECEE;
+  margin: 15% auto; /* 15% from the top and centered */
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
